fix(ui): improve legend hover feedback and annotation positioning
- Added hover effects to legend items (underline text, thicker border)
- Updated instructions to mention clicking legend items
- Reduced annotation line distance from 20px to 8px for clearer targeting
- Made entire genre dropdown row clickable for better UX
- Added cursor pointer styles to improve discoverability

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <!-- Instructions -->
         <div class="instructions">
-            <p><strong>How to explore:</strong> Select genres from dropdown • Drag on timeline to filter years • Double-click timeline to reset • Hover over dots for movie details</p>
+            <p><strong>How to explore:</strong> Select genres from dropdown • Click legend items to toggle ratings • Drag on timeline to filter years • Double-click timeline to reset • Hover over dots for movie details</p>
         </div>
 
         <!-- Integrated Filter & Stats Bar -->
