Apply Kerry's layout adjustments from PR #17
Integrated all layout improvements from Kerry's truncated y-axis PR:
- Moved timeline below main chart for better UX flow
- Reduced timeline heights (170px→150px) for cleaner proportions
- Removed min-height constraint from main chart for flexibility
- Updated responsive breakpoints with smaller timeline on mobile (80px)
- Adjusted padding from 5px to 10px on timeline for better spacing

These changes create a more compact and visually balanced layout
while maintaining full functionality of all interactive features.

Co-authored-by: Kerry Gu <kerry.gu@duke.edu>

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <!-- Instructions -->
         <div class="instructions">
-            <p><strong>How to explore:</strong> Select genres from dropdown • Click legend items to toggle ratings • Click 'Enable Zoom/Pan' to zoom & pan • Drag on timeline to filter years • Hover over dots for movie details</p>
+            <p><strong>How to explore:</strong> Select genres from dropdown • Click legend items to toggle ratings • Click 'Enable Zoom/Pan' to zoom & pan • Drag on timeline below to filter years • Hover over dots for movie details</p>
         </div>
 
         <!-- Integrated Filter & Stats Bar -->
@@ -91,12 +91,12 @@
 
                 <!-- Main Visualization: visualization, slider chart -->
                 <div id="visualization-content" class="visualization-section" style="display: none;">
-                    <div class="slider-section">
-                        <svg id="slider-chart"></svg>
-                    </div>
-
                     <div class="main-chart-section">
                         <svg id="main-chart"></svg>
+                    </div>
+
+                    <div class="slider-section">
+                        <svg id="slider-chart"></svg>
                     </div>
                 </div>
 
