--- a/index.html
+++ b/index.html
@@ -72,9 +72,6 @@
                 </div>
 
                 <div class="filter-actions">
-                    <button id="reset-timeline" class="btn btn-outline-secondary btn-sm">
-                        <span>⟲</span> Reset Timeline
-                    </button>
                     <button id="reset-filters" class="btn btn-outline-danger btn-sm">
                         <span>↻</span> Reset All
                     </button>
@@ -100,6 +97,12 @@
         <div class="visualization-continuation" style="display: none;">
             <div class="slider-section">
                 <svg id="slider-chart"></svg>
+                <!-- ARIA live region for timeline lock announcements -->
+                <div id="timeline-announcer" class="sr-only" aria-live="polite" aria-atomic="true"></div>
+                <!-- Reset Timeline Button (positioned in top-right corner) -->
+                <button id="reset-timeline" class="timeline-reset-btn" title="Reset Timeline">
+                    <span>↻</span>
+                </button>
             </div>
         </div>
 
