fix(chart): ensure x-axis updates correctly after story mode transitions
- Always explicitly set axis scales when updating chart
- Reset axis generators to use original scales when exiting story mode
- Prevent stale transformed scales from persisting after zoom operations
- Fix issue where x-axis wouldn't update when brushing timeline after story

--- a/index.html
+++ b/index.html
@@ -186,21 +186,26 @@
                     <h3 class="featured-title">📊 Featured Movies in Current Selection</h3>
                     <div class="featured-grid">
                         <div class="featured-card">
-                            <div class="featured-icon">💰</div>
-                            <div class="featured-label">Highest Grossing</div>
+                            <div class="featured-header">
+                                <span class="featured-icon">💰</span>
+                                <span class="featured-label">Highest Grossing</span>
+                            </div>
                             <div id="highest-grossing-title" class="featured-movie-title">-</div>
                             <div id="highest-grossing-value" class="featured-value">-</div>
                         </div>
                         <div class="featured-card">
-                            <div class="featured-icon">⭐</div>
-                            <div class="featured-label">Highest Rated</div>
+                            <div class="featured-header">
+                                <span class="featured-icon">⭐</span>
+                                <span class="featured-label">Highest Rated</span>
+                            </div>
                             <div id="highest-rated-title" class="featured-movie-title">-</div>
                             <div id="highest-rated-value" class="featured-value">-</div>
                         </div>
                         <div class="featured-card">
-                            <div class="featured-icon">💎</div>
-                            <div class="featured-label">Underrated Gem</div>
-                            <div class="featured-sublabel">High Rating, Lower Revenue</div>
+                            <div class="featured-header">
+                                <span class="featured-icon">💎</span>
+                                <span class="featured-label">Underrated Gem</span>
+                            </div>
                             <div id="hidden-gem-title" class="featured-movie-title">-</div>
                             <div id="hidden-gem-value" class="featured-value">-</div>
                         </div>
