feat(annotation): add help button with tooltip and auto-sizing annotation boxes
- Add question mark button next to annotation titles showing insight explanations
- Implement intelligent tooltip positioning to avoid overlaps and stay within bounds
- Auto-adjust annotation box width to accommodate content plus button (min 250px)
- Enhance visual hierarchy with proper spacing and 3D effects on buttons
- Ensure consistent text indentation and improved readability

--- a/index.html
+++ b/index.html
@@ -35,22 +35,18 @@
     <div class="container">
         <!-- First viewport: Core visualization (header to timeline) -->
         <div class="viewport-content">
-            <!-- Instructions - Top Left Corner -->
+            <!-- Quick Guide - Top Left Corner -->
             <div class="instructions-corner">
                 <details>
-                    <summary><strong><span aria-hidden="true">💡</span> How to Explore</strong></summary>
+                    <summary><strong><span aria-hidden="true">💡</span> Quick Guide</strong></summary>
                     <div class="tips-content">
-                        <span class="tip-item"><span aria-hidden="true">🎯</span> <strong>Click dots</strong> to compare with peer dots</span>
-                        <span class="tip-item"><span aria-hidden="true">🖱️</span> <strong>Click background</strong> to dismiss comparisons</span>
-                        <span class="tip-item"><span aria-hidden="true">📅</span> <strong>Drag timeline</strong> to filter year range</span>
-                        <span class="tip-item"><span aria-hidden="true">🔄</span> <strong>Hover timeline/dots</strong> for cross-highlights</span>
-                        <span class="tip-item"><span aria-hidden="true">🔒</span> <strong>Double-click timeline</strong> to lock highlighted year</span>
-                        <span class="tip-item"><span aria-hidden="true">↻</span> <strong>Timeline button</strong> resets timeline filter</span>
-                        <span class="tip-item"><span aria-hidden="true">🎬</span> <strong>Genre dropdown</strong> filters by movie type</span>
-                        <span class="tip-item"><span aria-hidden="true">📊</span> <strong>Click legend bands</strong> to toggle ratings</span>
-                        <span class="tip-item"><span aria-hidden="true">📏</span> <strong>Drag legend slider</strong> to adjust split</span>
-                        <span class="tip-item"><span aria-hidden="true">🔍</span> <strong>Cmd+scroll</strong> to zoom, drag to pan</span>
-                        <span class="tip-item"><span aria-hidden="true">📖</span> <strong>Story button</strong> for guided narrative</span>
+                        <span class="tip-item"><span aria-hidden="true">📅</span> <strong>Brush Timeline:</strong> Click and drag on timeline to filter by decade</span>
+                        <span class="tip-item"><span aria-hidden="true">🎯</span> <strong>Context-Click:</strong> Click any dot to compare it to peers</span>
+                        <span class="tip-item"><span aria-hidden="true">🔍</span> <strong>Zoom & Pan:</strong> Mouse wheel to zoom, drag chart to pan</span>
+                        <span class="tip-item"><span aria-hidden="true">📊</span> <strong>Toggle Legend:</strong> Click legend bands to show/hide ratings</span>
+                        <span class="tip-item"><span aria-hidden="true">🎬</span> <strong>Filter Genre:</strong> Use dropdown to filter by movie type</span>
+                        <span class="tip-item"><span aria-hidden="true">📏</span> <strong>Adjust Split:</strong> Drag slider to change rating threshold</span>
+                        <span class="tip-item"><span aria-hidden="true">📖</span> <strong>Take the Tour:</strong> Click "Tell Me a Story" for guided narrative</span>
                     </div>
                 </details>
             </div>
